hardware/plugins/CapEncoderGen/CapEncoderGen/cap_encoder_gen.log
08-21 19:43:49 CapEncoderGen.CapEncoderGen.logger 22:YES!
08-21 19:44:50 CapEncoderGen.CapEncoderGen.logger 22:YES!
08-21 19:58:31 CapEncoderGen.CapEncoderGen.logger 20:YES!
08-21 19:59:07 CapEncoderGen.CapEncoderGen.logger 20:YES!
08-21 19:59:16 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 20:51:38 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 20:59:35 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 20:59:37 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 20:59:42 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:00:12 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:00:13 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:00:14 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:00:49 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:05:41 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:07:00 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:07:19 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:09:10 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:09:11 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:09:22 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:09:43 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:10:15 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:10:29 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:10:37 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:10:38 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:20:03 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:20:23 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:21:33 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:21:51 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:23:05 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:23:19 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:26:26 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:26:48 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:26:53 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:27:50 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:27:54 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:27:55 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:27:56 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:27:56 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:27:56 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:27:56 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:27:56 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:27:56 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:27:56 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:27:57 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-21 21:28:00 CapEncoderGen.CapEncoderGen.logger 21:POOP!
08-22 10:09:47 CapEncoderGen.CapEncoderGen.logger 51:Poopy!
Traceback (most recent call last):
  File "/Users/nelgau/Documents/KiCad/6.0/scripting/plugins/CapEncoderGen/CapEncoderGen/logger.py", line 49, in wrapper
    return f(*args, **kwargs)
  File "/Users/nelgau/Documents/KiCad/6.0/scripting/plugins/CapEncoderGen/CapEncoderGen/plugin.py", line 23, in Run
    raise ValueError("Poopy!")
ValueError: Poopy!
08-22 10:14:04 CapEncoderGen.CapEncoderGen.logger 52:Poopy!
Traceback (most recent call last):
  File "/Users/nelgau/Documents/KiCad/6.0/scripting/plugins/CapEncoderGen/CapEncoderGen/logger.py", line 50, in wrapper
    return f(*args, **kwargs)
  File "/Users/nelgau/Documents/KiCad/6.0/scripting/plugins/CapEncoderGen/CapEncoderGen/plugin.py", line 23, in Run
    raise ValueError("Poopy!")
ValueError: Poopy!
08-22 10:14:29 CapEncoderGen.CapEncoderGen.logger 52:Poopy!
Traceback (most recent call last):
  File "/Users/nelgau/Documents/KiCad/6.0/scripting/plugins/CapEncoderGen/CapEncoderGen/logger.py", line 50, in wrapper
    return f(*args, **kwargs)
  File "/Users/nelgau/Documents/KiCad/6.0/scripting/plugins/CapEncoderGen/CapEncoderGen/plugin.py", line 23, in Run
    raise ValueError("Poopy!")
ValueError: Poopy!
08-22 10:15:37 CapEncoderGen.CapEncoderGen.logger 7:No module named 'pcb'
Traceback (most recent call last):
  File "/Users/nelgau/Documents/KiCad/6.0/scripting/plugins/CapEncoderGen/CapEncoderGen/__init__.py", line 2, in <module>
    from .plugin import CapEncoderGenPlugin
  File "/Users/nelgau/Documents/KiCad/6.0/scripting/plugins/CapEncoderGen/CapEncoderGen/plugin.py", line 4, in <module>
    from pcb import PCB
ModuleNotFoundError: No module named 'pcb'
08-22 10:15:55 CapEncoderGen.CapEncoderGen.logger 7:invalid syntax (pcb.py, line 18)
Traceback (most recent call last):
  File "/Users/nelgau/Documents/KiCad/6.0/scripting/plugins/CapEncoderGen/CapEncoderGen/__init__.py", line 2, in <module>
    from .plugin import CapEncoderGenPlugin
  File "/Users/nelgau/Documents/KiCad/6.0/scripting/plugins/CapEncoderGen/CapEncoderGen/plugin.py", line 4, in <module>
    from .pcb import PCB
  File "/Users/nelgau/Documents/KiCad/6.0/scripting/plugins/CapEncoderGen/CapEncoderGen/pcb.py", line 18
    zone = b.AddArea(None, 0, pcbnew.F_Cu, , pcbnew.ZONE_FILL_MODE_POLYGONS)
                                           ^
SyntaxError: invalid syntax
08-22 10:24:19 CapEncoderGen.CapEncoderGen.logger 7:invalid syntax (plugin.py, line 35)
Traceback (most recent call last):
  File "/Users/nelgau/Documents/KiCad/6.0/scripting/plugins/CapEncoderGen/CapEncoderGen/__init__.py", line 2, in <module>
    from .plugin import CapEncoderGenPlugin
  File "/Users/nelgau/Documents/KiCad/6.0/scripting/plugins/CapEncoderGen/CapEncoderGen/plugin.py", line 35
    for i in range(0, 100, 10)
                             ^
SyntaxError: invalid syntax
08-22 10:26:31 CapEncoderGen.CapEncoderGen.logger 52:name 'b' is not defined
Traceback (most recent call last):
  File "/Users/nelgau/Documents/KiCad/6.0/scripting/plugins/CapEncoderGen/CapEncoderGen/logger.py", line 50, in wrapper
    return f(*args, **kwargs)
  File "/Users/nelgau/Documents/KiCad/6.0/scripting/plugins/CapEncoderGen/CapEncoderGen/plugin.py", line 37, in Run
    pcb.add_zone(None, None, pts)
  File "/Users/nelgau/Documents/KiCad/6.0/scripting/plugins/CapEncoderGen/CapEncoderGen/pcb.py", line 18, in add_zone
    zone = b.AddArea(None, 0, pcbnew.F_Cu, p1, pcbnew.ZONE_FILL_MODE_POLYGONS)
NameError: name 'b' is not defined
